Pushing the scss/css excersize to repo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <link
       href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap"
       rel="stylesheet"
+      
     />
 
-    <link href="style.css" type="text/css" rel="stylesheet" />
+    <link href="/styles css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <header>
