adding bleu, red, variables css

--- a/index_red.html
+++ b/index_red.html
@@ -15,7 +15,7 @@
       
     />
 
-    <link href="/styles css/BLEU/style.css" type="text/css" rel="stylesheet" />
+<link href="/styles css/RED/Style_red.css" type="text/css" rel="stylesheet" />
 
   </head>
   <body>
@@ -23,10 +23,10 @@
       <h1>Learning to work with SASS</h1>
     </header>
 
-    <button>
-      <a class="red" href="/index_red.html">Click for red text</a>
-      <a class="bleu" href="/index.html">Click for bleu text</a>
-    </button>
+      <button>
+        <a class="red" href="/index_red.html">Click for red text</a>
+        <a class="bleu" href="/index.html">Click for bleu text</a>
+      </button>
 
     <article>
       <section id="selling-points">
