Changing href link in red and bleu head-section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
     />
 
-    <link href="/styles css/BLEU/style.css" type="text/css" rel="stylesheet" />
+    <link href="https://basileleroy.github.io/sass-challenge/styles css/BLEU/style.css" type="text/css" rel="stylesheet" />
 
   </head>
   <body>
