--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
     />
 
-    <link href="/styles css/BLEU/style.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" type="text/css" rel="stylesheet" />
 
   </head>
   <body>
