--- a/index_red.html
+++ b/index_red.html
@@ -15,7 +15,7 @@
       
     />
 
-    <link href="/styles css/RED/Style_red.css" type="text/css" rel="stylesheet" />
+    <link href="Style_red.css" type="text/css" rel="stylesheet" />
 
   </head>
   <body>
