fixing css failure

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </header>
 
     <button>
-      <a class="red" href="./index_red.html">Click for red text</a>
-      <a class="bleu" href="./index.html">Click for bleu text</a>
+      <a class="red" href="index_red.html">Click for red text</a>
+      <a class="bleu" href="index.html">Click for bleu text</a>
     </button>
 
     <article>
